# map_matching

./: .gitignore  0_Importing_csv_to_hdf5.py  1_Finding_Stops.py  2_Finding_network_links.py  3_Finding_Routes.py  Example.ipynb  LICENSE  Pipfile  README.md  Untitled Diagram.drawio  databaseDrivers.xml  databaseSettings.xml  diff.xml  editor.codeinsight.xml  editor.xml  example.ipynb  example.py  example_ATRI.py  example_MPO_Data.py  find.xml  github_settings.xml  intentionSettings.xml  jdk.table.xml  log_highlighting.xml  other.xml  parameters.py  parameters.yaml  pyproject.toml  requirements.txt  ui.lnf.xml  usageView.xml  vcs.xml
Map matching/: 01_Finding_network_links.py  02_Finding_Routes.py  02_Finding_Routes_multiprocessed.py  03_Select_link_analysis.py  04_Assignment_analysis.py  computing azimuth_formula_for_QGIS.txt  parameters.py  trash.py
Map matching/aequilibrae/: __init__.py
aequilibrae/: result_objects.pyx
docs/: Example - Known stops.ipynb
docs/source/: data_quality.md  index.md  network_data.md
example_data/: ATRI-LIKE-SAMPLE.csv  example_data_generic_gps_data.csv
inspection/: Default.xml
map_matching/: __init__.py  find_stops.py  finding_network_links.py  finding_routes.py  linebearing.py  map_match.py  map_matcher.py  network.py  parameters.py  parameters.yaml  trip.py
map_matching/aequilibrae/: AoN.pyd  AoN.pyx  __init__.py  graph.py  parameters.pxi  path_results.py  setup_Assignment.py
mapmatcher/: __init__.py  build_path.py  examples.py  graph_builder.py  interpolate_ts.py  linebearing.py  link_matcher.py  map_matcher.py  network.py  parameters.py  parameters.yaml  stop_finder.py  trip.py  utils.py
mapmatcher/example_data/: traces_nauru.csv
old/: example.py  example_ATRI.py
old_code/: 02_Finding_Routes.py  02_Finding_Routes_multiprocessed.py  5_Assignment_analysis_2.py  trash.py
src/: __init__.py  network.py  trip.py
tests/: example.py  example_ATRI.py  test_mapmatcher.py  test_stop_finder.py  test_trip.py  test_trip_map_match.py  test_trip_stops.py
(+8 files in other folders)
