[build-system]
requires = ["setuptools>=61.0", "aequilibrae", "geopandas", "wheel", "geopy"]
build-backend = "setuptools.build_meta"

[project]
name = 'mapmatcher'
authors = [{ name = "Pedro Camargo" }]
maintainers = [{ name = "Pedro Camargo", email = "pedro@outerloop.io" }]
dynamic = ["version"]
description = "A package to map-match GPS traces onto an arbitrary network"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: Proprietary",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    'aequilibrae',
    'geopandas',
    'tqdm'
]

[project.optional-dependencies]
linting = [
    'ruff'
]
formatting = [
    'black', 'isort'
]
docs = [
    'aequilibrae',
    'geopandas',
    'tqdm',
    'Sphinx',
    'sphinx_theme',
    'sphinx_autodoc_annotation',
    'nbsphinx',
    'pydata-sphinx-theme',
    'pandoc',
    'sphinx-gallery'
]
dev = ['mapmatcher[linting, formatting, docs]']

[project.urls]
Homepage = "https://github.com/pedrocamargo/map_matching"

[project.readme]
file = "README.md"
content-type = "text/markdown"


[tool.setuptools]
license-files = ["LICENSE"]
include-package-data = false

[tool.setuptools.package-data]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests"]
namespaces = true

[tool.setuptools.dynamic]
version = { attr = "mapmatcher.__version__" }

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120
profile = "black"